--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Books</h1>
-        <a href="#" id="add-link">Add a book &#9959;</a>
+        <a href="#" id="add-link">Add Book &#9959;</a>
     </header>
 
     <div class="columns two-columns">
