--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </header>
     <div id="error-message" style="display: none; color: red; margin: 10px 0; font-weight: bold;"></div>
     <div class="columns two-columns">
-        <div id="book-list" class="columns"></div>
+        <div id="book-list" class="columns">
+            <div id="books-container"></div> 
+        </div>
         <div id="book-details-column">
             <h2>Details</h2>
 
