--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- File input for image upload -->
             <p>
                 <label for="img">Upload Image:</label>
-                <input type="file" id="image" name="image" />
+                <input type="file" id="img" name="img" accept="image/*" />
             </p>
 
             <p id="book-p ">
