--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
