--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
